fixed the youtube frame close button to always display on mobile screens

--- a/src/components/youtube/youtube.styles.scss
+++ b/src/components/youtube/youtube.styles.scss
@@ -44,6 +44,10 @@
       color: #ff0000;
       cursor: pointer;
 
+      @media screen and (max-width: 768px) {
+        display: block;
+      }
+
       &:hover {
         opacity: 0.6;
       }
